# federog

./: .gitignore  AGENTS.md  Cargo.toml  README.md  mise.toml
src/: main.rs  schema.sql
